--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,7 +11,7 @@
 
 @font-face {
   font-family: "ika2";
-  src: url("/fonts/mplus-1c-black.ttf");
+  src: url("/fonts/mplus1cblack.woff");
 }
 
 html,
